# raspberry-pi-pico-uart-gpio-hub

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  checking_times.txt
client/: CMakeLists.txt  apply_commands.c  client_side_handshake.c  main.c
common/: CMakeLists.txt  config.c  functions.c  functions.h  types.c
docs/html/: annotated.html  annotated_dup.js  apply__commands_8c.html  apply__commands_8c.js  classes.html  client_2main_8c.html  client_2main_8c.js  client_8h.html  client_8h.js  client_8h_source.html  client__communication_8c.html  client__communication_8c.js  client__side__handshake_8c.html  client__side__handshake_8c.js  config_8h.html  config_8h.js  config_8h_source.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_fdedb0aba14d44ce9d99bc100e026e6a.html  dir_fdedb0aba14d44ce9d99bc100e026e6a.js  doxygen_crawl.html  files.html  functions.html  functions_8c.html  functions_8c.js  functions_8h.html  functions_8h.js  functions_8h_source.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  (+85 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  (+33 more)
flash/pico/: client.uf2  server.uf2
flash/pico2/: client.uf2  server.uf2
flash/pico2_w/: client.uf2  server.uf2
flash/pico_w/: client.uf2  server.uf2
include/: client.h  config.h  functions.h  input.h  menu.h  server.h  types.h
server/: CMakeLists.txt  input.c  main.c  menu.c  send_commands.c  server_side_handshake.c  state_handling.c
src/client/: CMakeLists.txt  apply_commands.c  client_side_handshake.c  main.c  power_saving_client.c
src/common/: CMakeLists.txt  functions.c
src/server/: CMakeLists.txt  client_communication.c  input.c  main.c  menu.c  server_side_handshake.c  state_apply.c  state_config.c  state_flash.c  state_handling.c  state_print.c
